--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/src/assets/logo-100x100.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <link rel="stylesheet" href="src/style.css"/>
       <link href="https://unpkg.com/vue-router@4.0.15/dist/vue-router.global.js.">
-      <title>for new nextin</title>
+      <title>Nextin</title>
 
       <!-- Google fonts -->
       <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -36,6 +36,7 @@
 
       <!-- inputmask  -->
       <script src="https://unpkg.com/imask"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.inputmask/5.0.7/jquery.inputmask.min.js"></script>
       <!-- inputmask  -->
 
 
@@ -55,11 +56,16 @@
       <script type="module" src="src/js/script.js"></script>
       <!-- main js -->
 
+
+
   </head>
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   <script>
+
+
+
 
 
 
