--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <link rel="stylesheet" href="src/style.css"/>
       <link href="https://unpkg.com/vue-router@4.0.15/dist/vue-router.global.js.">
-      <title>Nextin Web Studio</title>
+      <title>Nextin</title>
 
       <!-- Google fonts -->
       <link rel="preconnect" href="https://fonts.googleapis.com">
